# rtckinect

./: CMakeLists.txt  LICENSE.txt
cmake/: CMakeLists.txt  cpack_options.cmake.in  rtcomp.pc.in  rtcomp_utils.cmake
comp/: .rtc.cpp.swp  .rtc.h.swp  CMakeLists.txt  rtc.cpp  rtc.h  service_impl.cpp  service_impl.h  standalone.cpp
doc/: CMakeLists.txt  manual.tex
examples/: CMakeLists.txt
examples/conf/: CMakeLists.txt  comp.conf.in  rtc.conf
idl/: CMakeLists.txt  led.idl  service.idl
